--- a/CNN_Matlab/dogVScat.ipynb
+++ b/CNN_Matlab/dogVScat.ipynb
@@ -33,7 +33,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "undefined.undefined.undefined"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
